# generic_object_recognition

./: CMakeLists.txt
src/object_processor/: CMakeLists.txt
